# endurox-python

./: .gitmodules  CMakeLists.txt  LICENSE  README.rst  setup.py
doc/: BSDmakefile  Makefile  conf.py  endurox.rst  index.rst  make.bat
doc/guides/: Makefile  getting_started_tutorial.adoc  module_developer_guide.adoc  third_party_licences.adoc
doc/manpage/: Makefile  expyld.adoc
scripts/: expyld
src/endurox/: __init__.py  atmibuf.cpp  bufconv.cpp  bufconv_ubf.cpp  bufconv_view.cpp  endurox.cpp  endurox_atmi.cpp  endurox_srv.cpp  endurox_util.cpp  exceptions.h  ndrx_pymod.h  ndrxpy_config.h.in  tpext.cpp  tplog.cpp  ubfdict.py
tests/: test_runner.py
tests/libs/: exutils.py
tests/resources/: test.fd
tests/test001_buffers/: run.sh
tests/test001_buffers/runtime/conf/: 0py.ini  ndrxconfig.xml
tests/test002_atmiipc/: run.sh
tests/test002_atmiipc/runtime/conf/: 0py.ini  ndrxconfig.xml
tests/test002_atmiipc/runtime/ubftab/: test.fd
tests/test003_tmq/: run.sh
tests/test003_tmq/runtime/conf/: 0py.ini
tests/test004_util/: run.sh
tests/test004_util/runtime/conf/: 0py.ini  ndrxconfig.xml
tests/test005_oraclexa/: run.sh
tests/test005_oraclexa/runtime/conf/: 0py.ini  README  ndrxconfig.xml  tables.sql
tests/test006_expyld/: run.sh
tests/test006_expyld/src/test001/: file_two.py  hello.py
tests/test006_expyld/src/test002/: README  main.py
tests/test006_expyld/src/test002/libs/lib1/ok2/: lib.py
tests/test006_expyld/src/test002/libs/lib2/: lib.py
tests/test006_expyld/src/test003_resfiles/: main.py
tests/test006_expyld/src/test003_resfiles/libs/lib1/: lib.py
tests/test006_expyld/src/test004_syntaxerr/: main.py
tests/test006_expyld/src/test005_exitcode/: except.py  nonzero.py
tests/test006_expyld/src/test006_modinc/: main.py
tests/test006_expyld/src/test007_submod/: main.py
tests/test006_expyld/src/test007_submod/libs/test_mod/: __init__.py  some_mod.py  x.py
tests/test006_expyld/src/test007_submod/libs/test_mod/other_mod/: func.py
tests/test006_expyld/src/test008_pkgprec/: main.py  other_mod.py  some_mod.py
tests/test006_expyld/src/test008_pkgprec/lib/other_mod/: __init__.py
tests/test006_expyld/src/test008_pkgprec/some_mod/: __init__.py
tests/views/: CMakeLists.txt  test_view.v_in
